tests/NormalTests/paczka1/small_fuzzy/25809736.err
Error in line 2: dhlHi S651 37,8
Error in line 1: lzkx54dZFk A632 68,9
Error in line 14: bZJt7qQNyW S651 26,0
